--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # End of https://www.toptal.com/developers/gitignore/api/rider,fsharp
+
+.idea
