--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ bin
 !.paket/paket.bootstrapper.exe
 .ionide/
 .fake
+global.json
 
 ### Rider ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
